--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -22,3 +22,11 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Berlin
+          base_indepth: 'yes'
+          repositories_affiliations: 'owner'
+          plugin_languages: 'yes'
+          plugin_languages_ignored: 'html, css'
+          plugin_languages_indepth: 'yes'
+          # plugin_languages_sections: "most-used,recently-used"
+          plugin_languages_recent_load: 400
+          plugin_languages_recent_days: 73
